# stem-splitter-core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  demucs_runner.py
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: ensure_model.rs  split_one.rs
models/: registry.json
packaging/aur/: PKGBUILD.example
packaging/homebrew/: stem-splitter.rb
src/: audio.rs  error.rs  lib.rs  model.rs  model_manager.rs  net.rs  paths.rs  pipeline.rs  progress.rs  registry.rs  types.rs  utils.rs
src/core/: audio.rs  dsp.rs  engine.rs  ep.rs  splitter.rs
src/io/: ep_cache.rs  net.rs  paths.rs  progress.rs
src/model/: model_manager.rs
tests/: audio.rs  dsp.rs  engine.rs  model_manager.rs  pipeline.rs  splitter.rs
