[package]
name = "stem-splitter-core"
version = "0.1.0"
edition = "2021"
description = "Core library for AI-powered audio stem separation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gentij/stem-splitter-core"
homepage = "https://github.com/gentij/stem-splitter-core"
documentation = "https://github.com/gentij/stem-splitter-core"
readme = "README.md"
keywords = ["audio", "stem", "separation", "ai", "music"]
categories = ["multimedia::audio", "science"]
authors = ["Gentrit Jashari gentijashari5@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3"         
rubato = "0.12"     
ndarray = "0.15"    
anyhow = "1"        
